test/corpus/functions.txt
===============
Explicit return
===============

fn x() -> i32 {
    return 0;
}

---

(source_file
    (function
        (identifier)
        (primitive_type)
        (block
            (statement
                (return (number))))))

===============
Implicit return
===============

fn x() -> i32 {
    0
}

---

(source_file
    (function
        (identifier)
        (primitive_type)
        (block (number))))
